# You must change these to your own details.
[package]
name = "video-player"
description = "Scuffle Video Player"
version = "0.0.1"
authors = ["Troy Benson <troy@scuffle.tv>"]
categories = ["wasm"]
readme = "README.md"
license = "LICENSE.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"
tokio = { version = "1.32.0", features = ["sync", "macros"], default-features = false }
tracing = { version = "0.1.37", default-features = false, features = ["attributes", "std"]}
tracing-subscriber = { version = "0.3.17", features = ["registry"], default-features = false }
tracing-core = { version = "0.1.31", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
tsify = { git = "https://github.com/sisou/tsify.git", branch = "sisou/comments" }
js-sys = "0.3.64"
ulid = { version = "1.1.0", default-features = false }
gloo-timers = { version = "0.3.0", features = ["futures"] }
url = { version = "2.4.1", features = ["serde"] }
serde_json = "1.0.107"
bytes = "1.5.0"
serde_path_to_error = "0.1.14"

video-player-types = { workspace = true }
mp4 = { workspace = true }
h264 = { workspace = true }
bytesio = { workspace = true, default-features = false }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    "Window",
    "Performance",
    "HtmlVideoElement",
    "PerformanceObserver",
    "PerformanceObserverEntryList",
    "PerformanceObserverInit",
    "PerformanceResourceTiming",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
    "MediaSource",
    "Event",
    "Url",
    "MediaSource",
    "MediaSourceReadyState",
    "SourceBuffer",
    "SourceBufferList",
    "SourceBufferAppendMode",
    "TimeRanges",
    "ErrorEvent",
    "Event",
    "VisibilityState",
    "Storage",
]
