# You must change these to your own details.
[package]
name = "video-player"
description = "Scuffle Video Player"
version = "0.0.1"
authors = ["Troy Benson <troy@scuffle.tv>"]
categories = ["wasm"]
readme = "README.md"
license = "LICENSE.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
console_error_panic_hook = "0.1.7"
tokio = { version = "1.34.0", features = ["sync", "macros"], default-features = false }
tracing = { version = "0.1.40", default-features = false, features = ["attributes", "std"]}
tracing-subscriber = { version = "0.3.17", features = ["registry"], default-features = false }
tracing-core = { version = "0.1.32", default-features = false }
serde = { version = "1.0.192", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
tsify = { git = "https://github.com/ScuffleTV/tsify.git", branch = "sisou/comments" }
js-sys = "0.3.65"
ulid = { version = "1.1.0", default-features = false }
gloo-timers = { version = "0.3.0", features = ["futures"] }
url = { version = "2.4.1", features = ["serde"] }
serde_json = "1.0.108"
bytes = "1.5.0"
serde_path_to_error = "0.1.14"

video-player-types = { workspace = true }
mp4 = { workspace = true }
h264 = { workspace = true }
bytesio = { workspace = true, default-features = false }

[dependencies.web-sys]
version = "0.3.65"
features = [
    "console",
    "Window",
    "Performance",
    "HtmlVideoElement",
    "PerformanceObserver",
    "PerformanceObserverEntryList",
    "PerformanceObserverInit",
    "PerformanceResourceTiming",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
    "MediaSource",
    "Event",
    "Url",
    "MediaSource",
    "MediaSourceReadyState",
    "SourceBuffer",
    "SourceBufferList",
    "SourceBufferAppendMode",
    "TimeRanges",
    "ErrorEvent",
    "Event",
    "VisibilityState",
    "Storage",
]
