[package]
name = "video-transcoder"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "video-transcoder"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "1.1", features = ["full"] }
tonic = { version = "0.10", features = ["tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
prost = "0.12"
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"
bytes = "1.5"
async-trait = "0.1"
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = "0.1"
ulid = { version = "1.1", features = ["uuid"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
async-nats = "0.33"
thiserror = "1.0"
aws-config = "1.1"
aws-sdk-s3 = "1.12"
itertools = "0.12"
image = "0.24"

aac = { workspace = true }
mp4 = { workspace = true }
common = { workspace = true, features = ["default"] }
bytesio = { workspace = true, features = ["default"] }
config = { workspace = true }
pb = { workspace = true }
video-common = { workspace = true }
binary-helper = { workspace = true }
ffmpeg = { workspace = true, features = ["tokio-channel", "tracing", "task-abort"] }

[dev-dependencies]
dotenvy = "0.15"
portpicker = "0.1"
tempfile = "3.8"
serde_json = "1.0"
transmuxer = { workspace = true }
flv = { workspace = true }
